# src/controllers/userController.js
@@ -1,21 +1,27 @@
 import { generateToken } from "../helpers/generateToken.js";
 import { comparePassword, hashPassword } from "../helpers/passwordSecurity";
-import { userExist, createUser } from "../services/userServices.js";
+import { userExist, createUser, getAllUsers } from "../services/userServices.js";
+import { departmentExist } from "../services/departmentServices.js";
 
 export class UserControllers {
-  async register(req, res, next) {
+  async register(req, res) {
     try {
       const exist = await userExist(req.body.email);
+      const depExist = await departmentExist(req.body.department_name);
       if (exist) {
         res.status(409).json({
           message: "User with this email already exist",
         });
+      } else if (!depExist) {
+        res.status(404).json({
+          message: "Department has not found",
+        });
       } else {
         const user = {
-          username: req.body.username,
+          name: req.body.name,
           email: req.body.email,
           password: await hashPassword(req.body.password),
-          picture: req.body.picture,
+          department: depExist._id,
         };
         const createdUser = await createUser(user);
         res.status(201).json({
@@ -25,7 +31,10 @@ export class UserControllers {
         });
       }
     } catch (error) {
-      console.log(error);
+      res.status(500).json({
+        message: "Error occured while registering user, try again",
+        error: error.message,
+      });
     }
   }
   //   async login(req, res, next) {
@@ -49,4 +58,21 @@ export class UserControllers {
   //       console.log(error);
   //     }
   //   }
+
+  async getAllUsers(req, res) {
+    try {
+      const users = await getAllUsers();
+      return res.status(200).json({
+        users,
+      });
+    } catch (error) {
+      res.status(500).json({
+        message: "Error occured while getting all users",
+        error: error.message,
+      });
+    }
+  }
 }
+
+const userController = new UserControllers();
+export default userController;
