# src/routes/index.js
@@ -1,10 +1,10 @@
 import express from "express";
-import userRoutes from "./api/userRoutes";
+import userRouter from "./api/userRoutes";
 import departmentRoutes from "./api/departmentRoutes";
 
 const routes = express.Router();
 
-routes.use("/users", userRoutes);
+routes.use("/users", userRouter);
 routes.use("/departments", departmentRoutes);
 
 export default routes;
