# src/validations/userValidation/user.schema.js
@@ -1,7 +1,0 @@
-import joi from '@hapi/joi'
-
-export const userSchema = joi.object({
-    username: joi.string().required(),
-    email: joi.string().email().required(),
-    password: joi.string().min(8).max(10).pattern(new RegExp(/^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{6,16}$/)).message("Password must atleast have special character and a number").required()
-})
